Fixed more bugs and added tab collapse

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -144,15 +144,15 @@
   color: #F69331;
   font-size: 2em;
   cursor: default;
-  background-color: #222222;
+  background-color: #474747;
   border: 1px solid #F69331;
   border-bottom-color: transparent;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-topright: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  -webkit-border-top-left-radius: 10px;
+  -webkit-border-top-right-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 } 
 
 .nav-tabs > li > a{
@@ -171,7 +171,7 @@
 }
 
 .tab-pane {
-    
+    background-color: #474747;
     border-left: 1px solid #F69331;
     border-right: 1px solid #F69331;
     border-bottom: 1px solid #F69331;
@@ -179,12 +179,10 @@
     padding: 10px;
 }
 
-.tab-content {
-  border-radius: 10px;
-  background-color: #ddd;
-  margin-top: 0px;
-
+.panel-style {
+  color: #F69331;
 }
+
 
 .divider-bottom {
   margin-top: 10px;
